[gd_scene load_steps=2 format=3 uid="uid://ddbnfmvodspt1"]

[ext_resource type="Script" uid="uid://dn0waxh5nw3s5" path="res://Scripts/post_game.gd" id="1_0o73i"]

[node name="PostGame" type="Node2D"]
script = ExtResource("1_0o73i")

[node name="GameSummary" type="ItemList" parent="."]
offset_left = 400.0
offset_top = 620.0
offset_right = 1520.0
offset_bottom = 1040.0
theme_override_font_sizes/font_size = 30
select_mode = 1
wraparound_items = false
item_count = 5
max_columns = 5
same_column_width = true
item_0/text = "SCORE"
item_0/selectable = false
item_1/text = "LEVEL"
item_1/selectable = false
item_2/text = "LINES CLEARED"
item_2/selectable = false
item_3/text = "TIME PLAYED"
item_3/selectable = false
item_4/text = "SCORE LOG"
item_4/selectable = false

[node name="Save" type="Button" parent="."]
offset_left = 560.0
offset_top = 440.0
offset_right = 880.0
offset_bottom = 560.0
theme_override_font_sizes/font_size = 35
text = "Save to
database"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="Save"]
title = "Notice"
initial_position = 1
size = Vector2i(800, 256)
content_scale_aspect = 1
content_scale_factor = 1.5
dialog_text = "Note: SQL databases for official game records are in development.
You can take a screenshot for record-keeping in the meantime.
All screenshots are treated as valid but unofficial gameplay records."
cancel_button_text = "NULL"

[node name="Return" type="Button" parent="."]
offset_left = 1040.0
offset_top = 440.0
offset_right = 1360.0
offset_bottom = 560.0
theme_override_font_sizes/font_size = 35
text = "Return to
Main menu"

[node name="Label" type="Label" parent="."]
offset_left = 640.0
offset_top = 80.0
offset_right = 1280.0
offset_bottom = 260.0
theme_override_font_sizes/font_size = 30
text = "Good game!
Your gameplay summary is available below.
|
V"
horizontal_alignment = 1

[connection signal="pressed" from="Save" to="." method="_on_save_pressed"]
[connection signal="confirmed" from="Save/ConfirmationDialog" to="." method="_on_confirmation_dialog_confirmed"]
[connection signal="pressed" from="Return" to="." method="_on_return_pressed"]
